--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -1,6 +1,9 @@
 .pages {
+  width: 100%;
+  height: 100%;
+  position: fixed;
   .el-container {
-    width: 100%;
+    height: 100%;
     .el-header {
       padding: 0;
       height: 81px !important;
@@ -8,21 +11,20 @@
   }
 }
 .el-aside {
-  background-color: #5c5c5c;
+  background-color: #545c64;
   color: #fff;
   text-align: center;
   line-height: 200px;
 }
 
 .el-main {
-  background-color: #E9EEF3;
   color: #333;
   text-align: center;
   line-height: 160px;
 }
 
 body>.el-container {
-  margin-bottom: 40px;
+  // margin-bottom: 40px;
 }
 
 .el-container:nth-child(5) .el-aside,
