解决asideNav同时折叠/打开的问题

--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -6,7 +6,7 @@
     height: 100%;
     .el-header {
       padding: 0;
-      height: 81px !important;
+      height: 80px !important;
     }
   }
 }
@@ -35,3 +35,4 @@ body>.el-container {
 .el-container:nth-child(7) .el-aside {
   line-height: 320px;
 }
+.iconfont { font-size: 20px !important; }
