--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -1,3 +1,8 @@
+$themeColor: #ed6f43;
+.el-button--primary {
+ background: $themeColor !important;
+ border-color: $themeColor !important;
+}
 .pages {
   width: 100%;
   height: 100%;
@@ -21,6 +26,8 @@
   color: #333;
   text-align: center;
   line-height: 160px;
+  text-align: left;
+  line-height: 10px;
 }
 
 body>.el-container {
@@ -33,5 +40,14 @@ body>.el-container {
 }
 
 .el-container:nth-child(7) .el-aside { line-height: 320px; }
-.iconfont { font-size: 20px !important; }
-.cursor { cursor: pointer; }
+
+.el-button:focus,
+.el-button:hover {
+  color: $themeColor;
+  border-color: lighten($themeColor, 30%);
+  background-color:lighten($themeColor, 40%);
+}
+.el-button--primary:focus,
+.el-button--primary:hover {
+  color: #fff;
+}
